docs/0.7/_sources/api/gammapy.catalog.SourceCatalogObject2FHL.rst.txt
SourceCatalogObject2FHL
=======================

.. currentmodule:: gammapy.catalog

.. autoclass:: SourceCatalogObject2FHL
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~SourceCatalogObject2FHL.energy_range
      ~SourceCatalogObject2FHL.flux_points
      ~SourceCatalogObject2FHL.index
      ~SourceCatalogObject2FHL.name
      ~SourceCatalogObject2FHL.position
      ~SourceCatalogObject2FHL.spectral_model

   .. rubric:: Methods Summary

   .. autosummary::

      ~SourceCatalogObject2FHL.info
      ~SourceCatalogObject2FHL.pprint

   .. rubric:: Attributes Documentation

   .. autoattribute:: energy_range
   .. autoattribute:: flux_points
   .. autoattribute:: index
   .. autoattribute:: name
   .. autoattribute:: position
   .. autoattribute:: spectral_model

   .. rubric:: Methods Documentation

   .. automethod:: info
   .. automethod:: pprint
