docs/0.15/_sources/api/gammapy.catalog.SourceCatalogObject2FHL.rst.txt
SourceCatalogObject2FHL
=======================

.. currentmodule:: gammapy.catalog

.. autoclass:: SourceCatalogObject2FHL
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~SourceCatalogObject2FHL.asso
      ~SourceCatalogObject2FHL.energy_range
      ~SourceCatalogObject2FHL.flux_points
      ~SourceCatalogObject2FHL.name
      ~SourceCatalogObject2FHL.position
      ~SourceCatalogObject2FHL.row_index

   .. rubric:: Methods Summary

   .. autosummary::

      ~SourceCatalogObject2FHL.info
      ~SourceCatalogObject2FHL.sky_model
      ~SourceCatalogObject2FHL.spatial_model
      ~SourceCatalogObject2FHL.spectral_model

   .. rubric:: Attributes Documentation

   .. autoattribute:: asso
   .. autoattribute:: energy_range
   .. autoattribute:: flux_points
   .. autoattribute:: name
   .. autoattribute:: position
   .. autoattribute:: row_index

   .. rubric:: Methods Documentation

   .. automethod:: info
   .. automethod:: sky_model
   .. automethod:: spatial_model
   .. automethod:: spectral_model
